# python-project-basic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml
new_project/tests/utils/: test_mixin.py  test_singleton.py
new_project/utils/: mixin.py  root_logging.py  singleton.py
